syntax = "proto3";

import "structs/area_info.proto";

package messages;
option go_package = "github.com/swkoubou/torch/server/view/pb/messages";

message AllAreaInfoResponse {
    repeated structs.AreaInfo area_infos = 1;
}